[tool.poetry]
name = "dexie-liquidity-provider"
version = "0.1.0"
description = "Hybrid liquidity farming with Chia offers"
authors = ["Julie Bettens <no-reply@bbjubjub,fr>"]
license = "GPL3plus"

[tool.poetry.dependencies]
python = "^3.9"
chia-blockchain = "^1.5.1"
aiohttp = "^3.8"
click = ">=7"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-asyncio = "^0.19.0"
mypy = "^0.971"
flake8 = "^5.0.4"

[[tool.poetry.packages]]
include = "liquidity"

[tool.poetry.scripts]
liquidity = "liquidity:main"

[tool.black]
line-length = 120

[tool.isort]
line_length = 120

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
