[tool.poetry]
name = "chia_liquidity_provider"
version = "0.2.0"
description = "Hybrid liquidity farming with Chia offers"
authors = ["Louis Bettens <louis@bettens.info>"]
license = "GPL3plus"

[tool.poetry.dependencies]
python = "^3.9"
chia-blockchain = "^1.6.2"
aiohttp = "^3.8"
click = ">=7"
aiomisc = "^16.2.10"
aiosqlite = "^0.17.0"
xdg = "^5.1.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-asyncio = "^0.19.0"
mypy = "^0.971"
flake8 = "^5.0.4"
chia-dev-tools = "^1.1.3"

[[tool.poetry.packages]]
include = "chia_liquidity_provider"
from = "src"

[tool.poetry.scripts]
clp = "chia_liquidity_provider.main:main"

[tool.black]
line-length = 120

[tool.isort]
line_length = 120

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
